--- a/sales/Makefile
+++ b/sales/Makefile
@@ -1,6 +1,6 @@
 all:
-	python3 analyze.py 2020-06
+	python3 analyze.py data/2020-06
 
 run:
-	python3 -i analyze.py 2020-06
+	python3 -i analyze.py data/2020-06
 
